# auxiliary-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: Libraries.cmake  Pack.cmake
sandbox/: CMakeLists.txt
sandbox/networking/: CMakeLists.txt  server.cpp
sandbox/networking/asio/: CMakeLists.txt
sandbox/networking/asio/sources/: tcp-asynchronous.cpp  tcp-synchronous.cpp
sandbox/networking/server-client/: CMakeLists.txt
sandbox/networking/server-client/sources/: client.cpp
sources/auxiliary-cpp/common/: CMakeLists.txt  Concepts.h  Types.h
sources/auxiliary-cpp/common/storage/: AbstractStorage.h  StorageCategory.h  StorageContainer.h  StorageContainerIndex.h
sources/auxiliary-cpp/common/storage/sources/: AbstractStorage.cpp  StorageCategory.cpp  StorageContainer.cpp
sources/auxiliary-cpp/gui/: CMakeLists.txt  MessageDialog.h  QSfmlWidget.h
sources/auxiliary-cpp/gui/sources/: MessageDialog.cpp  MessageDialog.ui  QSfmlWidget.cpp
sources/auxiliary-cpp/math/: CMakeLists.txt  Matrix4x4.h  Vector2D.h  Vector3D.h  Vector4D.h
sources/auxiliary-cpp/math/geometry/: Vector.h  Vector3D.h
sources/auxiliary-cpp/math/geometry/sources/: Vector3D.cpp
sources/auxiliary-cpp/math/sources/: Vector2D.cpp  Vector3D.cpp
sources/auxiliary-cpp/networking/: CMakeLists.txt
sources/auxiliary-cpp/networking/messages/: Message.h
sources/auxiliary-cpp/networking/messages/sources/: Message.cpp
sources/auxiliary/common/: CMakeLists.txt  TimeUtils.h  Vector.h
sources/auxiliary/common/sources/: TimeUtils.cpp  Vector.cpp
sources/auxiliary/common/storage/sources/: AbstractStorage.cpp  StorageContainer.cpp
sources/auxiliary/gui/: CMakeLists.txt
src/auxiliary/common/: AbstractStorage.h  CMakeLists.txt  StorageCategory.h  StorageContainer.h  StorageContainerIndex.h  TimeUtils.h
src/auxiliary/common/src/: AbstractStorage.cpp  StorageCategory.cpp  StorageContainer.cpp  TimeUtils.cpp
src/auxiliary/common/storage/: AbstractStorage.h  StorageCategory.h  StorageContainer.h  StorageContainerIndex.h
src/auxiliary/common/storage/src/: StorageCategory.cpp
src/auxiliary/gui/: CMakeLists.txt  MessageDialog.h
src/auxiliary/gui/src/: MessageDialog.cpp  MessageDialog.ui
templates/: auxiliary-cpp-config.cmake.in  class-gtest.cpp.template  class.cpp.template  class.h.template  generate-class-gtest.py  generate-class.py  helpers.py
tests/: CMakeLists.txt
tests/auto/common/: CMakeLists.txt  StorageCategory_Test.cpp  StorageContainer_Test.cpp  TimeUtils_Test.cpp
tests/auto/math/: CMakeLists.txt  Matrix4x4_Test.cpp  Vector2D_Test.cpp  Vector3D_Test.cpp  Vector4D_Test.cpp
tests/common/: CMakeLists.txt  StorageCategory_Test.cpp  StorageContainer_Test.cpp  TimeUtils_Test.cpp
tests/manual/gui/: CMakeLists.txt  MessageDialog_ManualTest.cpp  QSfmlWidget_ManualTest.cpp
