cmake_path(RELATIVE_PATH CMAKE_CURRENT_SOURCE_DIR BASE_DIRECTORY ${CMAKE_SOURCE_DIR}/sources
           OUTPUT_VARIABLE RELATIVE_MODULE_PATH)

set(HEADERS
    Concepts.h)

add_custom_target(${MODULE_TARGET})

install(FILES ${HEADERS} DESTINATION ${CBS_INCLUDE_INSTALL_PATH}/${RELATIVE_MODULE_PATH} COMPONENT dev)
